--- a/index.html
+++ b/index.html
@@ -1,139 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Login and Registration</title>
+  <title>Children's Home</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
+      line-height: 1.6;
       margin: 0;
       padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    }
+
+    header {
+      background-color: #42a5f5;
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    nav {
+      background-color: #1976d2;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 10px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
 
     .container {
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-      max-width: 400px;
+      max-width: 1200px;
+      margin: 0 auto;
       padding: 20px;
-      width: 100%;
     }
 
-    .tab {
-      display: none;
-    }
-
-    .tab.active {
-      display: block;
-    }
-
-    .tab-header {
+    .jumbotron {
+      background-image: url('children-home.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 400px;
       display: flex;
-      margin-bottom: 20px;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-align: center;
+      font-size: 2em;
     }
 
-    .tab-header button {
-      background-color: transparent;
-      border: none;
-      border-bottom: 2px solid transparent;
-      cursor: pointer;
-      margin-right: 10px;
-      padding: 5px 10px;
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 30px;
     }
 
-    .tab-header button.active {
-      border-color: #3498db;
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-    }
-
-    .form-group label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    .form-group input {
-      width: 100%;
-      padding: 8px;
+    .service-card {
+      max-width: 300px;
+      margin: 20px;
+      padding: 20px;
       border: 1px solid #ccc;
-      border-radius: 3px;
+      border-radius: 5px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
-    .form-group button {
-      background-color: #3498db;
-      color: #fff;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 3px;
-      cursor: pointer;
-      width: 100%;
+    footer {
+      background-color: #42a5f5;
+      padding: 10px;
+      text-align: center;
+      color: white;
     }
   </style>
 </head>
+
 <body>
+  <header>
+    <h1>Children's Home</h1>
+  </header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+  <div class="jumbotron">
+    <h2>Welcome to Our Children's Home</h2>
+    <p>We provide a loving and caring environment for children in need.</p>
+  </div>
   <div class="container">
-    <div class="tab-header">
-      <button onclick="showTab(0)" class="active">Login</button>
-      <button onclick="showTab(1)">Register</button>
-    </div>
-    <div class="tab" id="loginTab">
-      <form>
-        <div class="form-group">
-          <label for="loginEmail">Email:</label>
-          <input type="email" id="loginEmail" required>
-        </div>
-        <div class="form-group">
-          <label for="loginPassword">Password:</label>
-          <input type="password" id="loginPassword" required>
-        </div>
-        <div class="form-group">
-          <button type="submit">Login</button>
-        </div>
-      </form>
-    </div>
-    <div class="tab" id="registerTab">
-      <form>
-        <div class="form-group">
-          <label for="registerName">Name:</label>
-          <input type="text" id="registerName" required>
-        </div>
-        <div class="form-group">
-          <label for="registerEmail">Email:</label>
-          <input type="email" id="registerEmail" required>
-        </div>
-        <div class="form-group">
-          <label for="registerPassword">Password:</label>
-          <input type="password" id="registerPassword" required>
-        </div>
-        <div class="form-group">
-          <button type="submit">Register</button>
-        </div>
-      </form>
+    <h2>Our Services</h2>
+    <div class="services">
+      <div class="service-card">
+        <img src="service1.jpg" alt="Service 1">
+        <h3>Education</h3>
+        <p>We offer quality education to children, empowering them for a brighter future.</p>
+      </div>
+      <div class="service-card">
+        <img src="service2.jpg" alt="Service 2">
+        <h3>Healthcare</h3>
+        <p>The health and well-being of the children are our top priorities.</p>
+      </div>
+      <div class="service-card">
+        <img src="service3.jpg" alt="Service 3">
+        <h3>Recreation</h3>
+        <p>We encourage recreational activities to promote physical and mental development.</p>
+      </div>
     </div>
   </div>
-
-  <script>
-    function showTab(tabIndex) {
-      const tabs = document.querySelectorAll(".tab");
-      const tabButtons = document.querySelectorAll(".tab-header button");
-      tabs.forEach((tab, index) => {
-        if (index === tabIndex) {
-          tab.classList.add("active");
-          tabButtons[index].classList.add("active");
-        } else {
-          tab.classList.remove("active");
-          tabButtons[index].classList.remove("active");
-        }
-      });
-    }
-  </script>
+  <footer>
+    <p>&copy; 2023 Children's Home. All rights reserved.</p>
+  </footer>
 </body>
+
 </html>
