--- a/index.html
+++ b/index.html
@@ -1,123 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Children's Home</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #42a5f5;
-      padding: 20px;
-      text-align: center;
-      color: white;
-    }
-
-    nav {
-      background-color: #1976d2;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 10px;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .jumbotron {
-      background-image: url('children-home.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 400px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-align: center;
-      font-size: 2em;
-    }
-
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 30px;
-    }
-
-    .service-card {
-      max-width: 300px;
-      margin: 20px;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    footer {
-      background-color: #42a5f5;
-      padding: 10px;
-      text-align: center;
-      color: white;
-    }
-  </style>
+    <title>Hello Page</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-  <header>
-    <h1>Children's Home</h1>
-  </header>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About Us</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
-  </nav>
-  <div class="jumbotron">
-    <h2>Welcome to Our Children's Home</h2>
-    <p>We provide a loving and caring environment for children in need.</p>
-  </div>
-  <div class="container">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="service-card">
-        <img src="service1.jpg" alt="Service 1">
-        <h3>Education</h3>
-        <p>We offer quality education to children, empowering them for a brighter future.</p>
-      </div>
-      <div class="service-card">
-        <img src="service2.jpg" alt="Service 2">
-        <h3>Healthcare</h3>
-        <p>The health and well-being of the children are our top priorities.</p>
-      </div>
-      <div class="service-card">
-        <img src="service3.jpg" alt="Service 3">
-        <h3>Recreation</h3>
-        <p>We encourage recreational activities to promote physical and mental development.</p>
-      </div>
+    <div class="center">
+        <p>Hello</p>
     </div>
-  </div>
-  <footer>
-    <p>&copy; 2023 Children's Home. All rights reserved.</p>
-  </footer>
 </body>
-
 </html>
