--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hello Page</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-    <div class="center">
-        <p>Hello</p>
-    </div>
-</body>
-</html>
+<div class="typewriter">
+  <h1>The cat and the hat.</h1>
+</div>
