--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
 <div class="typewriter">
-  <h1>The cat and the hat.</h1>
+  <h1>Hello this is Full FaithFoundation</h1>
 </div>
+
+</body>
+<html>
