--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
+  <title>About Us - Full Faith Foundation</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>Welcome to Full Faith Foundation</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="programs.html">Programs</a></li>
+        <li><a href="donate.html">Donate</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <h2>About Our Foundation</h2>
+      <p>Welcome to Full Faith Foundation, a non-profit organization dedicated to making a positive impact on the world. Our mission is to...</p>
+    </section>
+  </main>
 
-<div class="typewriter">
-  <h1>Hello this is Full FaithFoundation</h1>
-</div>
-
+  <footer>
+    <p>&copy; 2023 Full Faith Foundation. All rights reserved.</p>
+  </footer>
 </body>
-<html>
+</html>
