--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About Us - Full Faith Foundation</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Typewriter Effect</title>
+<style>
+  /* Typewriter effect CSS */
+  @keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+  }
+  @keyframes blink {
+    50% { border-color: transparent; }
+  }
+  body {
+    font-family: 'Courier New', Courier, monospace;
+    background: #f4f4f4;
+    overflow: hidden;
+  }
+  .typewriter h1 {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typewriter 4s steps(40, end) 1s 1 normal both,
+               blink .75s step-end infinite;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Welcome to Full Faith Foundation</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="donate.html">Donate</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <main>
-    <section>
-      <h2>About Our Foundation</h2>
-      <p>Welcome to Full Faith Foundation, a non-profit organization dedicated to making a positive impact on the world. Our mission is to...</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2023 Full Faith Foundation. All rights reserved.</p>
-  </footer>
+  <div class="typewriter">
+    <h1>Full Faith Foundation</h1>
+  </div>
 </body>
 </html>
