--- a/index.html
+++ b/index.html
@@ -3,35 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Typewriter Effect</title>
-<style>
-  /* Typewriter effect CSS */
-  @keyframes typewriter {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-  @keyframes blink {
-    50% { border-color: transparent; }
-  }
-  body {
-    font-family: 'Courier New', Courier, monospace;
-    background: #f4f4f4;
-    overflow: hidden;
-  }
-  .typewriter h1 {
-    overflow: hidden;
-    border-right: .15em solid orange;
-    white-space: nowrap;
-    margin: 0 auto;
-    letter-spacing: .15em;
-    animation: typewriter 4s steps(40, end) 1s 1 normal both,
-               blink .75s step-end infinite;
-  }
-</style>
+<title>Full Faith Foundation</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="typewriter">
-    <h1>Full Faith Foundation</h1>
-  </div>
-</body>
-</html>
+<header>
+  <h1>Full Faith Foundation</h1>
+  <nav>
+    <ul>
+      <li><a href="#home
