--- a/index.html
+++ b/index.html
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Full Faith Foundation</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full Faith Foundation</title>
+    <!-- Add CSS links here -->
 </head>
 <body>
-<header>
-  <h1>Full Faith Foundation</h1>
-  <nav>
-    <ul>
-      <li><a href="#home
+    <!-- Home Page -->
+    <section id="home">
+        <h1>Welcome to Full Faith Foundation</h1>
+        <p>Introduction to Full Faith Foundation...</p>
+        <h2>Mission Statement</h2>
+        <p>Clear statement of the organization's mission and values...</p>
+        <h2>Highlight of Current Projects</h2>
+        <p>Summary of ongoing projects and their impact...</p>
+        <a href="#get-involved" class="cta-btn">Donate or Volunteer</a>
+    </section>
+
+    <!-- About Us -->
+    <section id="about-us">
+        <h2>About Us</h2>
+        <h3>Detailed History</h3>
+        <p>Timeline or narrative detailing the organization's history and milestones...</p>
+        <h3>Information about the Team</h3>
+        <p>Profiles or bios of key team members and staff...</p>
+        <h3>Vision and Values</h3>
+        <p>Statement outlining the organization's vision for the future and core values...</p>
+    </section>
+
+    <!-- Our Work -->
+    <section id="our-work">
+        <h2>Our Work</h2>
+        <h3>Description of Ongoing Projects</h3>
+        <p>In-depth explanations of current initiatives, their objectives, and progress...</p>
+        <h3>Success Stories and Impact</h3>
+        <p>Stories or testimonials illustrating the positive outcomes of the organization's work...</p>
+        <h3>Photo Gallery</h3>
+        <p>Visual representation of the organization's projects and achievements...</p>
+    </section>
+
+    <!-- Get Involved -->
+    <section id="get-involved">
+        <h2>Get Involved</h2>
+        <h3>Volunteer Information</h3>
+        <p>Instructions on how to become a volunteer, including requirements and opportunities...</p>
+        <h3>Donation Options</h3>
+        <p>Various methods for making donations, with clear instructions...</p>
+        <h3>Fundraising Events</h3>
+        <p>Calendar or list of upcoming fundraising events and initiatives...</p>
+    </section>
+
+    <!-- News and Updates -->
+    <section id="news">
+        <h2>News and Updates</h2>
+        <h3>Blog or News Section</h3>
+        <p>Regularly updated content featuring news, updates, and stories related to the organization's activities...</p>
+        <h3>Newsletter Sign-Up</h3>
+        <p>Form for visitors to subscribe to the organization's newsletter for regular updates...</p>
+    </section>
+
+    <!-- Contact Us -->
+    <section id="contact-us">
+        <h2>Contact Us</h2>
+        <form action="#" method="post">
+            <!-- Add contact form fields here -->
+            <button type="submit">Submit</button>
+        </form>
+        <div class="social-media">
+            <!-- Add social media links/icons here -->
+        </div>
+        <div class="location-map">
+            <!-- Add location map here -->
+        </div>
+    </section>
+
+    <!-- Add JavaScript links or scripts here -->
+
+</body>
+</html>
