--- a/index.html
+++ b/index.html
@@ -7,87 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Home Page -->
-    <section id="home" class="section">
-        <div class="content">
-            <h1>Welcome to Full Faith Foundation</h1>
-            <p>Introduction to Full Faith Foundation...</p>
-            <h2>Mission Statement</h2>
-            <p>Clear statement of the organization's mission and values...</p>
-            <h2>Highlight of Current Projects</h2>
-            <p>Summary of ongoing projects and their impact...</p>
-            <a href="#get-involved" class="cta-btn">Donate or Volunteer</a>
+    <header>
+        <div class="container">
+            <h1>Full Faith Foundation</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Programs</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
         </div>
-    </section>
-
-    <!-- About Us -->
-    <section id="about-us" class="section">
-        <div class="content">
+    </header>
+    
+    <section id="about">
+        <div class="container">
             <h2>About Us</h2>
-            <h3>Detailed History</h3>
-            <p>Timeline or narrative detailing the organization's history and milestones...</p>
-            <h3>Information about the Team</h3>
-            <p>Profiles or bios of key team members and staff...</p>
-            <h3>Vision and Values</h3>
-            <p>Statement outlining the organization's vision for the future and core values...</p>
+            <p>At Full Faith Foundation, we are dedicated to providing quality education to underprivileged children, including those from single-parent households. We understand the challenges faced by these families, where parents may struggle to make ends meet and provide adequate time and attention to their children's education. Through our programs, we aim to bridge the gap by offering a nurturing learning environment where children can thrive academically, emotionally, and socially. By investing in education, we believe in breaking the cycle of poverty and empowering future generations to reach their full potential.</p>
         </div>
     </section>
-
-    <!-- Our Work -->
-    <section id="our-work" class="section">
-        <div class="content">
-            <h2>Our Work</h2>
-            <h3>Description of Ongoing Projects</h3>
-            <p>In-depth explanations of current initiatives, their objectives, and progress...</p>
-            <h3>Success Stories and Impact</h3>
-            <p>Stories or testimonials illustrating the positive outcomes of the organization's work...</p>
-            <h3>Photo Gallery</h3>
-            <p>Visual representation of the organization's projects and achievements...</p>
-        </div>
-    </section>
-
-    <!-- Get Involved -->
-    <section id="get-involved" class="section">
-        <div class="content">
-            <h2>Get Involved</h2>
-            <h3>Volunteer Information</h3>
-            <p>Instructions on how to become a volunteer, including requirements and opportunities...</p>
-            <h3>Donation Options</h3>
-            <p>Various methods for making donations, with clear instructions...</p>
-            <h3>Fundraising Events</h3>
-            <p>Calendar or list of upcoming fundraising events and initiatives...</p>
-        </div>
-    </section>
-
-    <!-- News and Updates -->
-    <section id="news" class="section">
-        <div class="content">
-            <h2>News and Updates</h2>
-            <h3>Blog or News Section</h3>
-            <p>Regularly updated content featuring news, updates, and stories related to the organization's activities...</p>
-            <h3>Newsletter Sign-Up</h3>
-            <p>Form for visitors to subscribe to the organization's newsletter for regular updates...</p>
-        </div>
-    </section>
-
-    <!-- Contact Us -->
-    <section id="contact-us" class="section">
-        <div class="content">
+    
+    <section id="contact">
+        <div class="container">
             <h2>Contact Us</h2>
-            <form action="#" method="post">
-                <!-- Add contact form fields here -->
-                <button type="submit">Submit</button>
-            </form>
-            <div class="social-media">
-                <!-- Add social media links/icons here -->
-            </div>
-            <div class="location-map">
-                <!-- Add location map here -->
-            </div>
+            <p>Feel free to reach out to us for any inquiries, volunteering opportunities, or to learn more about our programs and how you can support our cause. We look forward to hearing from you!</p>
+            <p>Phone: 9958016255</p>
+            <p>Email: fullfaithfoundation@gmail.com</p>
         </div>
     </section>
 
-    <!-- Add JavaScript links or scripts here -->
-
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Full Faith Foundation. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
