--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             margin-bottom: 20px;
         }
 
+        /* Contact Section Styles */
+        #contact p {
+            margin-bottom: 10px;
+        }
+
         /* Footer Styles */
         footer {
             background: #333;
@@ -82,7 +87,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -92,6 +97,15 @@
         <div class="container">
             <h2>About Us</h2>
             <p>At Full Faith Foundation, we are dedicated to providing quality education to underprivileged children, including those from single-parent households. We understand the challenges faced by these families, where parents may struggle to make ends meet and provide adequate time and attention to their children's education. Through our programs, we aim to bridge the gap by offering a nurturing learning environment where children can thrive academically, emotionally, and socially. By investing in education, we believe in breaking the cycle of poverty and empowering future generations to reach their full potential.</p>
+        </div>
+    </section>
+    
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Feel free to reach out to us for any inquiries, volunteering opportunities, or to learn more about our programs and how you can support our cause. We look forward to hearing from you!</p>
+            <p>Phone: 9958016255</p>
+            <p>Email: fullfaithfoundation@gmail.com</p>
         </div>
     </section>
 
