--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
             margin-bottom: 10px;
         }
 
+        #contact a {
+            color: #007bff; /* Change link color */
+            text-decoration: none;
+        }
+
+        #contact a:hover {
+            text-decoration: underline; /* Underline on hover */
+        }
+
         /* Footer Styles */
         footer {
             background: #333;
@@ -87,7 +96,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -104,8 +113,8 @@
         <div class="container">
             <h2>Contact Us</h2>
             <p>Feel free to reach out to us for any inquiries, volunteering opportunities, or to learn more about our programs and how you can support our cause. We look forward to hearing from you!</p>
-            <p>Phone: 9958016255</p>
-            <p>Email: fullfaithfoundation@gmail.com</p>
+            <p>Phone: <a href="tel:9958016255">9958016255</a></p>
+            <p>Email: <a href="mailto:fullfaithfoundation@gmail.com">fullfaithfoundation@gmail.com</a></p>
         </div>
     </section>
 
