--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<script src="script.js"></script>
     <div class="container">
         <h1>Math Exercise Generator</h1>
         
