--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Exercise Generator[ M.E.G.A ]</title>
+    <title>[ M.E.G.A ] Project</title>
     <link rel="stylesheet" href="styles.css">
 <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Math Exercise Generator</h1>
+        <h1>Math Exercise Generator [M.E.G.A]</h1>
         
         <form id="exerciseForm">
             <label for="operation">Select Operation:</label>
