--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">   
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Details Form</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trust NGO</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>Student Details Form</h2>
-  <form id="studentForm">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <label for="age">Age:</label><br>
-    <input type="number" id="age" name="age" required><br><br>
-    <button type="submit">LLLSubmit</button>
-  </form>
-
-  <script src="script.js"></script>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Trust NGO">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#programs">Programs</a></li>
+                <li><a href="#get-involved">Get Involved</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home" class="banner">
+            <h1>Welcome to Trust NGO</h1>
+            <p>Making a difference in the world, one step at a time.</p>
+            <div class="cta-buttons">
+                <a href="#donate" class="btn">Donate Now</a>
+                <a href="#get-involved" class="btn">Get Involved</a>
+            </div>
+        </section>
+        <section id="about" class="about-section">
+            <div class="about-content">
+                <h2>About Us</h2>
+                <p>Trust NGO is dedicated to improving the lives of communities through various programs and initiatives.</p>
+                <a href="#programs" class="btn">Learn More</a>
+            </div>
+        </section>
+        <!-- Other sections like Programs, Get Involved, Contact Us can be added similarly -->
+    </main>
+    <footer>
+        <div class="footer-content">
+            <p>Contact us: info@trustngo.org | 123-456-7890</p>
+            <ul class="social-links">
+                <li><a href="https://facebook.com/trustngo" target="_blank">Facebook</a></li>
+                <li><a href="https://twitter.com/trustngo" target="_blank">Twitter</a></li>
+                <li><a href="https://instagram.com/trustngo" target="_blank">Instagram</a></li>
+            </ul>
+        </div>
+        <p>&copy; 2024 Trust NGO. All rights reserved.</p>
+    </footer>
 </body>
 </html>
